[package]
name = "crawler_challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", features = ["gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3